// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings with headline data should render correctly 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  color: #3F3F42;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0;
  font-weight: 500;
}

.c0 {
  display: grid;
  grid-column-gap: 16px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@media (max-width:63rem) {
  .c0 {
    grid-column: 1 / span 6;
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 6;
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 12;
    grid-template-columns: repeat(12,1fr);
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  >
    This is a headline!
  </h1>
</div>
`;

exports[`Headings with subheadline data should render correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 1.5rem 0;
  font-weight: 700;
}

.c0 {
  display: grid;
  grid-column-gap: 16px;
  grid-column: 1 / span 6;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-top: 2rem;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
    id="This-is-a-subheadline"
    tabIndex="-1"
  >
    This is a subheadline
  </h2>
</div>
`;
